2007-07-30  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-form.el: Changes to download contents after submitting form.
	(w3m-form-download): New variable.
	(w3m-fontify-textareas, w3m-form-parse-and-fontify): Combine the above
	variable into expressions which represent form actions.
	(w3m-form-submit): Accept and optional argument `download'.

	* w3m.el: Changes to download contents after submitting form.
	(w3m-download): Accept and optional argument `post-data'.
	(w3m-download-this-url): `w3m-form-download' is binded locally.
	(w3m-view-this-url): Ditto.
	(w3m-submit-form): Ditto.

2007-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ucs.el (font-ccl-encoder-alist): Bind it for XEmacs 21.5.

2007-07-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-relationship-estimate-rules): Make Google rule support
	images.

2007-07-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-session.el (w3m-session-select, w3m-session-selected): Add spec
	for dark tty.
	(w3m-session-select): Use read-key-sequence rather than read-event or
	next-command-event in order to enable it to read arrow keys in tty.

2007-07-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-form-make-button): Make it work.

	* w3m-ems.el (w3m-form-make-button): Work when w3m-form-use-fancy-faces
	is nil.

2007-07-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-article-function): Change the default function into
	browse-url; doc fix.
	(w3m-safe-view-this-url): Catch a signal from function which is set to
	w3m-goto-article-function, and don't run the default function if it is
	nil.

2007-07-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-article-function): Use defcustom; doc fix.
	(w3m-safe-view-this-url): Use functionp instead of fboundp to check the
	value of w3m-goto-article-function.

	* w3m-favicon.el, w3m-namazu.el, w3m-perldoc.el, w3m-xmas.el, w3m.el:
	Use custom-set-default instead of set-default in defcustom forms.

2007-07-02  Katsumi Yamaoka  <yamaoka@jpl.org>
